/**
 * Copyright (C) 2007-2024 fze.NET, All rights reserved.
 *
 * name: provider_service.proto
 * author: jarrysix (jarrysix#gmail.com)
 * date: 2024-09-06 09:17:13
 * description: 第三方服务接口
 * history:
 */
syntax = "proto3";


option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";



// 第三方服务提供服务
service ServiceProviderService {
    // 获取服务提供者
    rpc GetOpenId(GetUserOpenIdRequest) returns (UserOpenIdResponse);
    // 获取小程序二维码
    rpc GetMPCode(MPCodeRequest) returns (MPQrCodeResponse);
}

// 获取用户OpenId请求
message GetUserOpenIdRequest {
    // 应用ID
    int64 appId = 1;
    // 用户授权码
    string code = 2;
    // 类型
    string type = 3;
}

// 用户OpenId响应
message UserOpenIdResponse {
    // 状态码
    int32 code = 1;
    // 状态信息
    string message = 2;
    // 用户OpenId
    string openId = 3;
    // 用户UnionId
    string unionId = 4;
    // 返回第三方应用Id, 如微信小程序的appId
    string appId = 5;
}

// 小程序二维码请求
message MPCodeRequest {
    // 应用ID
    int64 appId = 1;      
    // 页面路径
    string page = 2;
    // 场景值,可用来传递参数，并在页面上获取，如: orderNo=20260102
    string scene = 3;
    // 是否保存到本地
    bool saveLocal = 4;
    // 所有者Key,如果保存到本地则需设置
    string ownerKey = 5;  
}

// 小程序二维码响应
message MPQrCodeResponse {
    // 状态码
    int32 code = 1;
    // 状态信息
    string message = 2;
    // 二维码图片
    string qrCodeUrl = 3;
}